--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,11 @@
   margin: 0;
   box-sizing: border-box;
 }
+
+.App{
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
